executable('hello', 'hello.cpp', link_with : firestorm, dependencies : deps, include_directories : inc)

executable('fizzbuzz', 'fizzbuzz.cpp', link_with : firestorm, dependencies : deps, include_directories : inc)

executable('forms', 'forms/forms.cpp', link_with : firestorm, dependencies : deps, include_directories : inc)

executable('html', 'html/html.cpp', link_with : firestorm, dependencies : deps, include_directories : inc)

executable('todo', 'todo/todo.cpp', link_with : firestorm, dependencies : deps, include_directories : inc)
