subdir('html')
subdir('forms')
subdir('todo')

executable('hello', 'hello.cpp', link_with : firestorm, dependencies : deps, include_directories : inc)

executable('fizzbuzz', 'fizzbuzz.cpp', link_with : firestorm, dependencies : deps, include_directories : inc)

executable('custom_error', 'custom_error.cpp', link_with : firestorm, dependencies : deps, include_directories : inc)
