headers = [
  'cookie.h',
  'error.h',
  'firestorm.h',
  'form.h',
  'headers.h',
  'html.h',
  'logging.h',
  'middleware.h',
  'outcome.h',
  'response.h',
  'route.h',
  'router.h',
  'static_file.h'
]

install_headers(headers, install_dir : sk_gcc_include_dir)
install_headers(headers, install_dir : sk_clang_include_dir)
