src = [
  'cookie.cpp',
  'error.cpp',
  'firestorm.cpp',
  'firestorm_mock.cpp',
  'form.cpp',
  'headers.cpp',
  'html.cpp',
  'logging.cpp',
  'middleware.cpp',
  'outcome.cpp',
  'response.cpp',
  'route.cpp',
  'router.cpp',
  'static_file.cpp',
  'utils.cpp'
]

firestorm = library('firestorm',
                    src,
                    dependencies : deps,
                    include_directories : inc,
                    install : true,
                    install_dir : sk_lib_dir)
